[package]
name = "web-image"
version = "0.1.0"
authors = ["Ridan Vandenbergh <ridanvandenbergh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
image = "0.23.12"
imageproc = "0.22.0"
log = "0.4.11"
gif = "0.11.1"